hphp/hack/test/enum_supertyping/typing/duplicate_parent_siblings.bad.php.exp
File "duplicate_parent_siblings.bad.php", line 16, characters 40-47:
SuperEnum cannot re-inherit constant A from \SubEnumB (Typing[4389])
File "duplicate_parent_siblings.bad.php", line 16, characters 6-14:
because it already inherited it via SubEnumA
File "duplicate_parent_siblings.bad.php", line 17, characters 3-3:
SuperEnum cannot re-declare constant A (Typing[4389])
File "duplicate_parent_siblings.bad.php", line 16, characters 6-14:
because it already inherited it via SubEnumA
